Final security fix: fully dynamic CORS configuration